--- a/app/src/main/res/layout/activity_show_detales_for_one_project.xml
+++ b/app/src/main/res/layout/activity_show_detales_for_one_project.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.show_detales_for_one_project"
     android:orientation="vertical"
-    android:background="@drawable/backhome"
     >
 
     <HorizontalScrollView
@@ -93,7 +93,6 @@
     <FrameLayout
         android:id="@+id/frame"
         android:layout_below="@id/linear"
-
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
