--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#c10616</color>
     <color name="colorPrimaryDark">#570007</color>
     <color name="colorAccent">#ffffff</color>
+    <color name="textColor">#000000</color>
+    <color name="LPColor">#FFEFC83D</color>
 </resources>
