--- a/app/src/main/res/layout/fragment_project_tbee.xml
+++ b/app/src/main/res/layout/fragment_project_tbee.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fargment.project_tbee">
+    tools:context=".fargment.project_tbee"
+    tools:ignore="MissingDefaultResource">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/ViewPager_tbee"
