--- a/app/src/main/res/layout/activity_mainaa.xml
+++ b/app/src/main/res/layout/activity_mainaa.xml
@@ -15,10 +15,11 @@
         tools:context=".MainActivity">
 <TextView
     android:layout_width="wrap_content"
-    android:text="All Kind Of Developers In Egypt "
-    android:background="#fafafb"
+    android:text="All Kind Of Developers In Egypt"
     android:layout_margin="8dp"
     android:textSize="24sp"
+    android:textColor="#000"
+    android:textStyle="bold"
     android:layout_height="wrap_content" />
         <android.support.v7.widget.SearchView
             android:layout_width="290dp"
